<resources>
    <string-array name="week_repeat_list">
        <item>Ні</item>
        <item>На 1 тиждень</item>
        <item>На 2 тижні</item>
        <item>На 3 тижні</item>
    </string-array>
    <string-array name="notification_before_variants">
        <item>Ні</item>
        <item>За 1 годину</item>
        <item>За 2 години</item>
        <item>За 3 години</item>
        <item>За 16 годин</item>
        <item>За 1 добу</item>
    </string-array>
    <string-array name="courses">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="app_name">Щоденник викладача</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="scheduleTag" translatable="false">Schedule</string>
    <string name="templatesTag" translatable="false">Templates</string>
    <string name="groupsTag" translatable="false">Groups</string>
    <string name="subjectsTag" translatable="false">Subject</string>
    <string name="settingsTag" translatable="false">Settings</string>
    <string name="schedule_alarm_title">Розклад дзвінків</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_deleteClasses">Видалити заняття</string>
    <string name="action_importTemplates">Імпортувати шаблони</string>
    <string name="action_report">Сформувати звіт</string>
    <string name="popup_Follow">Перейти</string>
    <string name="template_activity_close_alert_title">Ви дійсно хочете вийти?</string>
    <string name="template_activity_close_alert_content">Всі внесені дані будуть втрачені</string>
    <string name="popup_sort">Сортувати</string>
    <string name="popup_filter">Фільтрувати</string>
    <string name="popup_choose_date_report">Оберіть період звіту</string>
    <string name="popup_gen_report">Згенерувати звіт</string>
    <string name="popup_dates_wrong">Введений діпазон дат невірний або введений курс, повторіть введення!</string>
    <string name="popup_edit">Редагувати</string>
    <string name="popup_groupName_label">Група:</string>
    <string name="popup_subjectName_label">Предмет:</string>
    <string name="popup_duration_label">Тривалість:</string>
    <string name="description_label">Опис:</string>
    <string name="notification_label">Нагадування до початку:</string>
    <string name="repeat_for_next_weeks_label">Повторити на наступні тижні:</string>
    <string name="popup_delete">Видалити</string>
    <string name="popup_delete_subject_title">Видалити предмети</string>
    <string name="popup_delete_subject_content">Ви дійсно хочете видалити обрані предмети? Заняття з цих предметів будуть видалені з розкладу та шаблонів</string>
    <string name="popup_delete_group_title">Видалити групи</string>
    <string name="popup_delete_group_content">Ви дійсно хочете видалити обрані групи?</string>
    <string name="popup_delete_classes_template">Видалити заняття</string>
    <string name="popup_delete_speciality">Видалити спеціальності</string>
    <string name="popup_delete_speciality_content">Ви дійсно хочете видалити обрані спеціальності?</string>
    <string name="popup_delete_classes_content">Ви дійсно хочете видалити обрані заняття?</string>
    <string name="popup_complete_classes_template">Вичитані заняття</string>
    <string name="popup_complete_single_title">Вичитати заняття</string>
    <string name="popup_complete_single_content">Ви дійсно хочете позначити вичитаним обране заняття?</string>
    <string name="popup_uncomplete_single_title">Не вичитане заняття</string>
    <string name="popup_uncomplete_single_content">Ви дійсно хочете позначити не вичитаним обране заняття?</string>
    <string name="popup_complete_classes_content">Ви дійсно хочете позначити вичитаними обрані заняття?</string>
    <string name="popup_uncomplete_classes_content">Ви дійсно хочете позначити не вичитаними обрані заняття?</string>
    <string name="popup_cut_classes_template">Зняти заняття</string>
    <string name="popup_cut_classes_single_title">Зняти заняття</string>
    <string name="popup_cut_classes_single_content">Ви дійсно хочете зняти обране заняття?</string>
    <string name="popup_cut_classes_content">Ви дійсно хочете зняти обрані заняття?</string>
    <string name="popup_uncut_classes_content">Ви дійсно хочете повернути обраним заняттям статус невичитаних?</string>
    <string name="popup_super_template">Super шаблон</string>
    <string name="popup_add_template">Додавання шаблону</string>
    <string name="popup_edit_template">Редагування шаблону</string>
    <string name="popup_edit_class">Редагувати заняття</string>
    <string name="popup_add_class">Додати заняття</string>
    <string name="add_class">Додавання заняття</string>
    <string name="edit_class">Редагування заняття</string>
    <string name="popup_accept">Прийняти</string>
    <string name="popup_cancel">Відмінити</string>
    <string name="popup_duration_short">1 год.</string>
    <string name="popup_duration_full">2 год.</string>
    <string name="cab_select_text"> Обрано</string>
    <string name="menu_schedule">Розклад</string>
    <string name="menu_templates">Шаблони</string>
    <string name="menu_groups">Групи</string>
    <string name="menu_subjects">Предмети</string>
    <string name="menu_settings">Налаштування</string>
    <string name="groupName_hint">Назва групи</string>
    <string name="template_label">Назва шаблону:</string>
    <string name="week_label">Тиждень:</string>
    <string name="week_upper_label">Верхня</string>
    <string name="week_down_label">Нижня</string>
    <string name="dialog_filter_group">Фільтрувати групи</string>
    <string name="dialog_filter_subject">Фільтрувати предмети</string>
    <string name="dialog_sort_group">Сортувати групи</string>
    <string name="dialog_sort_subject">Сортувати предмети</string>
    <string name="spinner_all">Всі</string>
    <string name="dialog_edit_speciality">Редагувати спеціальність</string>
    <string name="dialog_add_speciality">Додати спеціальність</string>
    <string name="dialog_button_add">Додати</string>
    <string name="specialty_list_label">Спеціальності</string>
    <string name="specialty_cours_length">Кількість курсів:</string>
    <string name="specialtyName_label">Назва:</string>
    <string name="specialty_label">Спеціальність:</string>
    <string name="course_label">Курс:</string>
    <string name="groupName_label">Назва:</string>
    <string name="subjectName_label">Назва:</string>
    <string name="color_label">Колір:</string>
    <string name="textStub">Текст</string>
    <string name="title_activity_add_template" translatable="false">AddTemplateActivity</string>
    <string name="title_activity_add_group" translatable="false">AddGroupActivity</string>
    <string name="title_activity_add_subject" translatable="false">AddSubjectActivity</string>
    <string name="title_activity_edit_group" translatable="false">EditGroupActivity</string>
    <string name="date_creation">Дата створення: ДД.ММ.РРРР</string>
    <string name="period_report"> Період: </string>
    <string name="delete_alert_header">Видалити</string>
    <string name="delete_alert_msg">Ви справді хочете видалити запис?</string>
    <string name="delete_positive">Так</string>
    <string name="delete_negative">Ні</string>
    <string name="title_activity_edit_subject" translatable="false">EditSubjectActivity</string>
    <string name="report">Звіт</string>
    <string name="tableDisciplineHeader">Дисципліна</string>
    <string name="tableGroupHeader">Група</string>
    <string name="tablePlanHeader">За планом(у періоді)</string>
    <string name="tableFactHeader">Фактично(у періоді)</string>
    <string name="tableCanceledHeader">Знято(у періоді)</string>
    <string name="tableRestHeader">Залишок(у періоді)</string>
    <string name="ok_button" translatable="false">ОК</string>
    <string name="hoursHeader">Години</string>
    <string name="monHeader">Пн</string>
    <string name="tueHeader">Вв</string>
    <string name="wedHeader">Ср</string>
    <string name="thuHeader">Чт</string>
    <string name="friHeader">Пт</string>
    <string name="satHeader">Сб</string>
    <string name="sunHeader">Нд</string>
    <string name="contentDateFiller">ДД</string>
    <string name="January">Січень</string>
    <string name="February">Лютий</string>
    <string name="March">Березень</string>
    <string name="April">Квітень</string>
    <string name="May">Травень</string>
    <string name="June">Червень</string>
    <string name="July">Липень</string>
    <string name="August">Серпень</string>
    <string name="September">Вересень</string>
    <string name="November">Листопад</string>
    <string name="December">Грудень</string>
    <string name="firstCoupleHeader" translatable="false">1</string>
    <string name="secondCoupleHeader" translatable="false">2</string>
    <string name="thirdCoupleHeader" translatable="false">3</string>
    <string name="fourthCoupleHeader" translatable="false">4</string>
    <string name="fifthCoupleHeader" translatable="false">5</string>
    <string name="firstHalfCoupleHeader" translatable="false">1</string>
    <string name="secondHalfCoupleHeader" translatable="false">2</string>
    <string name="subjectName_hint">Назва предмету</string>
    <string name="title_activity_edit_template" translatable="false">EditTemplateActivity</string>
    <string name="title_activity_speciality" translatable="false">SpecialitiesActivity</string>
    <string name="title_activity_genreport" translatable="false">GenReportActivty</string>
    <string name="title_activity_add_class" translatable="false">AddClassActivty</string>
    <string name="subject_group_list">Групи:</string>
    <string name="totalHoursLabel">Годин за планом:</string>
    <string name="readHoursLabel">Вичитано годин:</string>
    <string name="canceledLabel">Знято годин:</string>
    <string name="hourLabel">година</string>
    <string name="hourTimeLabel">ЧЧ</string>
    <string name="timeDivider" translatable="false">:</string>
    <string name="firstLessonLable">1 пара</string>
    <string name="secondLessonLable">2 пара</string>
    <string name="thirdLessonLable">3 пара</string>
    <string name="fourthLessonLable">4 пара</string>
    <string name="fifthLessonLable">5 пара</string>
    <string name="hourLabelText">Час початку</string>
    <string name="auto_complete_text_view_hint">Введіть назву та оберіть її у списку</string>
    <string name="backup_title">Резервні копії</string>
    <string name="backup_label_name">Назва:</string>
    <string name="date_creation_label">Дата створення</string>
    <string name="dialog_add_backup">Створити резервну копію</string>
    <string name="backup_name_label">Назва резервної копії</string>
    <string name="delete_backups_label">Видалити резервні копії</string>
    <string name="delete_backups_content">Ви дійсно хочете видалити обрані резервні копії?</string>
    <string name="backups_sending_error_message">Файли резервних копій не були відправлені. Можливо, вони відсутні у папці backup на внутрішній пам\'яті вашого пристрою</string>
    <string name="backup_sending_title">Помилка відправлення</string>
    <string name="file_error_toast_part1">Файл з назвою:</string>
    <string name="file_error_toast_part2">не існує</string>
    <string name="backups_theme_email">Резервні копії</string>
    <string name="edit_name_of_backup">Редагувати назву копії</string>
    <string name="minuteTimeLabel">ММ</string>
    <string name="restHeader">Залишок:</string>
</resources>