<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_calendar_today_24px"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_templates"
            android:icon="@drawable/ic_book_open"
            android:title="@string/menu_templates"/>
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_group_24px"
            android:title="@string/menu_groups" />
        <item
            android:id="@+id/nav_subjects"
            android:icon="@drawable/ic_collections_bookmark_24px"
            android:title="@string/menu_subjects" />
        <item
            android:id="@+id/nav_specialities"
            android:icon="@drawable/ic_speciality"
            android:title="@string/specialty_list_label"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings"/>
    </group>

</menu>
