<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/hourLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hourLabel"
        android:textColor="@color/appDefaultBlack"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginStart="10dp"/>


    <TextView
        android:id="@+id/hourTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hourTimeLabel"
        android:textColor="@color/sideBar"
        android:textSize="45sp"
        android:layout_below="@id/hourLabel"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/dividerTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeDivider"
        android:textColor="@color/sideBar"
        android:textSize="45sp"
        android:layout_below="@id/hourLabel"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/hourTimeLabel"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/minuteTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minuteTimeLabel"
        android:textColor="@color/sideBar"
        android:textSize="45sp"
        android:layout_below="@id/hourLabel"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/dividerTime"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"/>

</RelativeLayout>