<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView
        android:id="@+id/popup_group_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_groupName_label"
        android:textSize="16sp"
        android:textColor="@color/appDefaultBlack"
        android:layout_marginTop="26dp"
        android:layout_marginStart="15dp"/>
    <AutoCompleteTextView
        android:id="@+id/groupNameSuggestET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/sideBar"
        android:textSize="16sp"
        android:textColor="@color/appDefaultBlack"
        android:layout_marginTop="15dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="15dp"
        android:layout_toEndOf="@id/popup_group_name"
        />
    <TextView
        android:id="@+id/popup_subject_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_subjectName_label"
        android:textSize="16sp"
        android:textColor="@color/appDefaultBlack"
        android:layout_below="@id/popup_group_name"
        android:layout_marginTop="23dp"
        android:layout_marginStart="15dp"/>
    <Spinner
        android:id="@+id/spinnerSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/popup_subject_name"
        android:layout_below="@id/groupNameSuggestET"
        android:layout_marginStart="23dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="15dp" />

    <TextView
        android:id="@+id/popup_duration_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_duration_label"
        android:textSize="16sp"
        android:textColor="@color/appDefaultBlack"
        android:layout_below="@id/popup_subject_name"
        android:layout_marginStart="15dp"
        android:layout_marginTop="23dp"
        />
    <RadioGroup
        android:id="@+id/popup_duration_rgroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/spinnerSubject"
        android:layout_toEndOf="@id/popup_duration_label"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="9dp">
        <RadioButton
            android:id="@+id/popup_duration_rgroup_short"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popup_duration_short"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/popup_duration_rgroup_full"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:text="@string/popup_duration_full"
            />
    </RadioGroup>



</RelativeLayout>