<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/activatedBackgroundIndicator">



        <TextView
            android:id="@+id/groupNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/groupName_label"
            android:textSize="16sp"
            android:textColor="@color/appDefaultBlack"
            android:layout_marginTop="10dp"
            android:layout_marginStart="6dp"/>


        <TextView
            android:id="@+id/specialityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specialty_label"
            android:textSize="16sp"
            android:textColor="@color/appDefaultBlack"
            android:layout_marginTop="10dp"
            android:layout_below="@id/groupNameLabel"
            android:layout_marginStart="6dp"/>

        <TextView
            android:id="@+id/totalHoursLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalHoursLabel"
            android:textSize="16sp"
            android:textColor="@color/appDefaultBlack"
            android:layout_marginTop="10dp"
            android:layout_below="@id/specialityText"
            android:layout_marginStart="6dp"/>


        <TextView
            android:id="@+id/readHoursLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/readHoursLabel"
            android:textSize="16sp"
            android:textColor="@color/appDefaultBlack"
            android:layout_marginTop="10dp"
            android:layout_below="@id/totalHoursLabel"
            android:layout_marginStart="6dp"/>



        <TextView
            android:id="@+id/canceledHoursLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/canceledLabel"
            android:textSize="16sp"
            android:textColor="@color/appDefaultBlack"
            android:layout_marginTop="10dp"
            android:layout_below="@id/readHoursLabel"
            android:layout_marginStart="6dp"/>


        <TextView
            android:id="@+id/restHoursLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restHeader"
            android:textSize="16sp"
            android:textColor="@color/appDefaultBlack"
            android:layout_marginTop="10dp"
            android:layout_below="@id/canceledHoursLabel"
            android:layout_marginStart="6dp"/>

        <TextView
            android:id="@+id/groupNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textStub"
            android:layout_alignStart="@id/totalHoursText"
            android:textSize="16sp"
            android:textColor="@color/appDefaultBlack"
            android:layout_marginTop="10dp" />
        <TextView
            android:id="@+id/specialityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textStub"
            android:layout_alignStart="@id/totalHoursText"
            android:textSize="16sp"
            android:textColor="@color/appDefaultBlack"
            android:layout_marginTop="10dp"
            android:layout_below="@id/groupNameText" />
        <TextView
            android:id="@+id/totalHoursText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@id/totalHoursLabel"
            android:text="@string/textStub"
            android:textSize="16sp"
            android:textColor="@color/appDefaultBlack"
            android:layout_marginTop="10dp"
            android:layout_below="@id/specialityText" />
        <TextView
            android:id="@+id/readHoursText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textStub"
            android:textSize="16sp"
            android:layout_alignStart="@id/totalHoursText"
            android:textColor="@color/appDefaultBlack"
            android:layout_marginTop="10dp"
            android:layout_below="@id/totalHoursText" />
        <TextView
            android:id="@+id/canceledHoursText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textStub"
            android:layout_alignStart="@id/totalHoursText"
            android:textSize="16sp"
            android:textColor="@color/appDefaultBlack"
            android:layout_marginTop="10dp"
            android:layout_below="@id/readHoursText" />
        <TextView
            android:id="@+id/restHoursText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textStub"
            android:textSize="16sp"
            android:textColor="@color/appDefaultBlack"
            android:layout_marginTop="10dp"
            android:layout_alignStart="@id/totalHoursText"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/canceledHoursText" />
</RelativeLayout>